String to Curves node produces NaN when size is zero #91756

Closed
opened 2021-09-27 18:28:25 +02:00 by Jacques Lucke · 6 comments
Member

System Information
Operating system: Linux-5.14.6-arch1-1-x86_64-with-glibc2.33 64 Bits
Graphics card: AMD Radeon RX 5700 (NAVI10, DRM 3.42.0, 5.14.6-arch1-1, LLVM 12.0.1) AMD 4.6 (Core Profile) Mesa 21.2.2

Blender Version
Broken: version: 3.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown
Worked: (newest version of Blender that worked as expected)

Exact steps for others to reproduce the error

[Please describe the exact steps needed to reproduce the issue]
Create a curve with the String to Curves node and see that the computed position is NaN.

image.png
string_to_curve_nan.blend

**System Information** Operating system: Linux-5.14.6-arch1-1-x86_64-with-glibc2.33 64 Bits Graphics card: AMD Radeon RX 5700 (NAVI10, DRM 3.42.0, 5.14.6-arch1-1, LLVM 12.0.1) AMD 4.6 (Core Profile) Mesa 21.2.2 **Blender Version** Broken: version: 3.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` Worked: (newest version of Blender that worked as expected) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] Create a curve with the String to Curves node and see that the computed position is NaN. ![image.png](https://archive.blender.org/developer/F10634478/image.png) [string_to_curve_nan.blend](https://archive.blender.org/developer/F10634490/string_to_curve_nan.blend)
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Erik Abrahamsson was assigned by Jacques Lucke 2021-09-27 18:28:51 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly

@JacquesLucke i'm wondering what the correct behaviour would be here. Keep all instances at 0, or completely skip everything?

@JacquesLucke i'm wondering what the correct behaviour would be here. Keep all instances at 0, or completely skip everything?

This issue was referenced by 0c32e3b312

This issue was referenced by 0c32e3b312212196b2748327713ab3bc31825412
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91756
No description provided.