Fix T91756: String to Curve node produces NaN when size is zero